package tower;

import flyable.aircraft.Coordinates;
import tower.Tower;

public class WeatherTower extends Tower {
    public String getWeather(Coordinates p_coordinates) {
        assert false;
        return null;
    }

    public void changeWeather() {
        assert false;
    }
}
